<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragments.PodcastListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_podcast_list_podcasts_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/fragment_podcast_list_non_empty_top_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/fragment_podcast_list_empty_loading_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="fragment_podcast_list_empty_loading_progress_bar, fragment_podcast_list_empty_loading_text_view"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/fragment_podcast_list_empty_loading_progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@+id/fragment_podcast_list_empty_loading_text_view"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent=".5" />

    <TextView
        android:id="@+id/fragment_podcast_list_empty_loading_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_podcast_list_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_podcast_list_empty_loading_progress_bar" />

    <TextView
        android:id="@+id/fragment_podcast_list_empty_complete_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_podcast_list_empty_complete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/fragment_podcast_list_empty_error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_podcast_list_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/fragment_podcast_list_non_empty_top_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="top"
        app:constraint_referenced_ids="fragment_podcast_list_non_empty_loading_progress_bar, fragment_podcast_list_non_empty_loading_text_view, fragment_podcast_list_non_empty_error_text_view" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/fragment_podcast_list_non_empty_loading_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="fragment_podcast_list_non_empty_loading_progress_bar, fragment_podcast_list_non_empty_loading_text_view"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/fragment_podcast_list_non_empty_loading_progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/fragment_podcast_list_non_empty_loading_text_view"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@+id/fragment_podcast_list_non_empty_top_barrier" />

    <TextView
        android:id="@+id/fragment_podcast_list_non_empty_loading_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_podcast_list_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_podcast_list_non_empty_top_barrier"
        app:layout_constraintWidth_percent=".5" />

    <TextView
        android:id="@+id/fragment_podcast_list_non_empty_error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_podcast_list_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_podcast_list_non_empty_top_barrier"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>