<resources>
    <string name="app_name">HeathCast</string>
    <string name="action_settings">Settings</string>
    <string name="add_podcast">Add Podcast</string>
    <string name="fragment_podcast_search_title">Search for Podcasts</string>
    <string name="fragment_podcast_search_error">Error searching iTunes</string>
    <string name="fragment_podcast_search_query_hint">Enter a podcast name to search</string>
    <string name="fragment_podcast_list_title">Podcast List</string>
    <string name="fragment_podcast_list_loading">Loading…</string>
    <string name="fragment_podcast_list_empty_complete">No Results</string>
    <string name="fragment_podcast_list_error">Error</string>
    <string name="fragment_podcast_missing">Missing</string>
    <string name="fragment_podcast_subscribed">Subscribed</string>
    <string name="fragment_podcast_not_subscribed">Subscribe</string>
    <string name="fragment_podcast_subscribe_success">Subscribed!</string>
    <string name="fragment_podcast_subscribe_failure">Subscribing failed. Try again.</string>
    <string name="fragment_podcast_unsubscribe_success">Unsubscribed!</string>
    <string name="fragment_podcast_unsubscribe_failure">Unsubscribing failed. Try again.</string>
    <string name="fragment_podcast_episode_list_error">Error listing episodes</string>
</resources>
