...
            app:layout_constraintHeight_percent=".1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_podcast_name_text_view"
            tools:text="Author" />

        <Button
            android:id="@+id/fragment_podcast_subscribed_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
...
